# curated.guide

./: .gitignore  README.md  justfile  main.py  pyproject.toml
business/: analytics.md  brandvoice.md  designguide.md  documentation.md  features.md  index.md  personas.md  seo.md  techstack.md  zen.md
src/backend/accounts/: admin.py  models.py  signals.py
src/backend/accounts/migrations/: 0001_initial.py  0002_user_invites_available_invitation.py  0003_remove_user_invites_available.py  0004_invitation_invitation_type_and_more.py
src/backend/config/: settings.py
src/backend/core/: models.py
src/backend/guides/: admin.py  models.py
src/backend/guides/migrations/: 0001_initial.py  0002_link_remove_item_links_item_links.py  0003_guide_is_listed_alter_guide_cover_image_and_more.py  0004_guide_deleted_at_guide_is_deleted.py  0005_alter_guide_created_at_alter_guide_deleted_at_and_more.py
